# RayBNN_Cell

./: Cargo.toml  README.md
src/: lib.rs
src/Hidden/: Sphere.rs
src/Input/: Sphere.rs
src/Util/: Math.rs
tests/: test_collision_batch.rs  test_collision_minibatch.rs  test_collision_minibatch2.rs  test_collision_serial.rs  test_generate.rs  test_generate2.rs  test_input.rs  test_input2.rs  test_math.rs
