[package]
name = "RayBNN_Cell"
version = "2.0.3"
authors = ["Brosnan Yuen <brosnanyuen@gmail.com>"]
edition = "2021"
description = "Cell Position Generator for RayBNN"
readme = "README.md"
repository = "https://github.com/BrosnanYuen/RayBNN_Cell"
keywords = ["raytracer","raytracing","ray-tracing","CUDA","OpenCL"]
license = "GPL-3.0-only"
categories = ["science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
rand = "0.8.5"
RayBNN_DataLoader = "2.0.3"

[dev-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
rand = "0.8.5"
RayBNN_DataLoader = "2.0.3"

[build-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
rand = "0.8.5"
RayBNN_DataLoader = "2.0.3"

[lib]
name = "RayBNN_Cell"
path = "src/lib.rs"




